# BasicOfProgrammingCourse

course/: CMakeLists.txt  main.c
course/libs/: CMakeLists.txt
course/libs/algorithms/: algorithm.c  algorithm.h
course/libs/algorithms/array/: array.c  array.h
course/libs/data_structures/bitset/: bitset.c  bitset.h
